@@ -1,3 +1,9 @@
+2000-03-19  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/FileDialog.c (gncFileQuerySave): return a boolean value
+ 	indicating whether the user wants to proceed or cancel. The uses
+ 	of this function have been updated to respond appropriately.
+
 2000-03-18  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/engine/Query.c (xaccInitQuery): make the standard engine
